--- a/cfg/xtsdk_ros1.cfg
+++ b/cfg/xtsdk_ros1.cfg
@@ -41,7 +41,10 @@ gen.add("usb_com",           bool_t, 1,  	"SET USB",  True)
 gen.add("usb_com_name",        str_t,  0,  	"usb com name", "/dev/ttyACM0")
 gen.add("HDR",               int_t,  0, 	"HDR mode", 				1, 0, 1, edit_method=hdr_mode_enum)
 gen.add("cloud_coord",               int_t,  0, 	"coordination mode", 				1, 0, 1, edit_method=cloud_coord_enum)
-gen.add("gray_on",           bool_t, 1,  	"SET USB",  False)
+gen.add("gray_on",           bool_t, 1,  	"gray_on",  False)
+gen.add("hmirror",           bool_t, 1,  	"hmirror",  False)
+gen.add("vmirror",           bool_t, 1,  	"vmirror",  False)
+gen.add("binningV",          bool_t, 1,  	"binningV", False)
 gen.add("is_use_devconfig",           bool_t, 1,  	"is_use_devconfig",  True)
 
 
