--- a/cfg/xtsdk_ros1.cfg
+++ b/cfg/xtsdk_ros1.cfg
@@ -37,7 +37,7 @@ frequence_modulation_enum = gen.enum([ gen.const("12MHz", int_t, 0, "12MHz"),
 
 gen.add("imgType",             int_t,  0,  	"Image type", 				4, 0, 4, edit_method=image_type_enum)
 gen.add("start_stream",           bool_t, 0,  	"Start / Stop image acquisition",  True)
-gen.add("usb_com",           bool_t, 0,  	"SET USB",  True)
+gen.add("usb_com",           bool_t, 0,  	"SET USB",  False)
 gen.add("usb_com_name",        str_t,  0,  	"usb com name", "/dev/ttyACM0")
 gen.add("HDR",               int_t,  0, 	"HDR mode", 				1, 0, 1, edit_method=hdr_mode_enum)
 gen.add("cloud_coord",               int_t,  0, 	"coordination mode", 				1, 0, 1, edit_method=cloud_coord_enum)
